# oracle-datum-lib

./: .gitignore  README.md  cabal.project  oracle-feed.cabal  spec.cddl
src/: OracleFeed.hs  Utils.hs
src/OracleFeed/: ExtendedData.hs  Feed.hs  PriceData.hs  SharedData.hs  Types.hs
test/: Main.hs
test/Test/: Utils.hs
test/Test/Compiled/: PriceData.hs
test/Test/OracleFeed/: ExtendedData.hs  PriceData.hs  SharedData.hs
