cabal-version:      2.4
name:               oracle-feed
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             MartorSkull
maintainer:         martin_montane_6@hotmail.com


library
    exposed-modules:  OracleFeed
                      Utils
    other-modules:    OracleFeed.Types
                      OracleFeed.Feed
                      OracleFeed.PriceData
                      OracleFeed.SharedData
                      OracleFeed.ExtendedData

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , plutus-tx
                      , plutus-ledger-api
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas
                        -fno-omit-interface-pragmas -fno-strictness
                        -fno-spec-constr -fno-specialise
    default-extensions: NoImplicitPrelude
                        OverloadedStrings

test-suite feed-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:    Test.OracleFeed.PriceData
                      Test.OracleFeed.SharedData
                      Test.OracleFeed.ExtendedData
                      Test.Utils
    default-language: Haskell2010
    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas
                        -fno-omit-interface-pragmas -fno-strictness
                        -fno-spec-constr -fno-specialise
    build-depends:       base ^>=4.14.1.0
                        , tasty
                        , tasty-hunit
                        , text
                        , plutus-tx
                        , plutus-tx-plugin
                        , plutus-ledger-api
                        , oracle-feed
                        , plutus-core
                        , serialise
                        , hex-text